--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
+    "react-toastify": "^10.0.4",
     "yup": "^1.3.3"
   },
   "devDependencies": {
